# printing-matrix

./: .gitignore  Cargo.toml  README.md
derives/: Cargo.toml
derives/src/: lib.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.AsRef.js  trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/type_matrux/client/: trait.AuthDrukarnia.js
docs/src/type_matrux/: lib.rs.html
docs/src/type_matrux/client/: mod.rs.html  utils.rs.html
docs/src/type_matrux/object/: article.rs.html  bookmark.rs.html  comment.rs.html  list.rs.html  mod.rs.html  tag.rs.html  user.rs.html
docs/type_matrux/: all.html  index.html  sidebar-items.js  struct.ReqwestApi.html
docs/type_matrux/client/: enum.Error.html  index.html  sidebar-items.js  struct.ReqwestApi.html  struct.ReqwestAuth.html  trait.AuthDrukarnia.html  trait.DrukarniaApi.html
docs/type_matrux/object/: enum.MaybeUrl.html  index.html  sidebar-items.js  struct.ArticleComment.html  struct.ArticleDescription.html  struct.ArticleId.html  struct.ArticleSlug.html  struct.ArticleTag.html  struct.ArticleTitle.html  struct.ArticleUser.html  struct.AuthorArticle.html  struct.AuthorizedUser.html  struct.BookmarkId.html  struct.CommentId.html  struct.CommentUser.html  struct.Credentials.html  struct.FeedArticle.html  struct.FollowerUser.html  struct.FullArticle.html  struct.FullBookmark.html  struct.FullList.html  struct.FullTag.html  struct.FullUser.html  struct.ListArticle.html  struct.ListId.html  struct.PopularTag.html  struct.RecommendedArticle.html  struct.Relationships.html  struct.ReplyComment.html  struct.SearchArticle.html  struct.ShortArticle.html  struct.ShortUser.html  struct.TagArticle.html  struct.TagId.html  struct.TagName.html  struct.TagSlug.html  struct.UserDescription.html  struct.UserDisplayName.html  struct.UserId.html  struct.UserName.html  (+3 more)
docs/type_matrux/object/article/: struct.Author.html  struct.Description.html  struct.Feed.html  struct.Full.html  struct.Id.html  struct.List.html  struct.Recommended.html  struct.Search.html  struct.Short.html  struct.Slug.html  struct.Tag.html  struct.Title.html
docs/type_matrux/object/bookmark/: struct.Full.html  struct.Id.html
docs/type_matrux/object/comment/: struct.Article.html  struct.Id.html  struct.Reply.html
docs/type_matrux/object/list/: struct.Full.html  struct.Id.html
docs/type_matrux/object/tag/: struct.Article.html  struct.Full.html  struct.Id.html  struct.Name.html  struct.Slug.html  (+2 more)
examples/: averages.rs  feed.rs
src/: lib.rs
src/client/: mod.rs  utils.rs
src/client/impls/: mod.rs  reqwest.rs
src/object/: article.rs  bookmark.rs  comment.rs  list.rs  mod.rs  tag.rs  user.rs
tests/: reqwest.rs
type-matrux-core/: Cargo.toml
type-matrux-core/src/: lib.rs
type-matrux-core/src/executor/: mod.rs  reqwest.rs
type-matrux-core/src/primitives/: id.rs  maybe_url.rs  mod.rs  slug.rs
type-matrux-core/src/request/: mod.rs
type-matrux-requests/: Cargo.toml
type-matrux-requests/src/: lib.rs  popular_tags.rs  search_users.rs
type-matrux-util/: Cargo.toml
type-matrux-util/src/: lib.rs
type-matrux-util/src/sow/: arc.rs  mod.rs  rc.rs
(+20 files in other folders)
