[package]
name = "type-matrux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
derive-getters = "0.3.0"
derive_more = "0.99.17"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive", "std"] }
time = { version = "0.3.29", features = ["serde", "serde-human-readable"] }
url = { version = "2.4.1", features = ["serde"] }
derives = { path = "./derives" }
thiserror = "1.0.49"
pin-project = "1.1.3"
email_address = "0.2.4"
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11", optional = false, features = ["json", "cookies"] }
lazy_static = "1.4.0"
tracing = "0.1.37"
mime = "0.3.17"
tokio = {version = "1.32"}
html_parser = "0.7.0"
serde-hex = "0.1.0"
serde_json = "1.0.107"

[dev-dependencies]
tokio = {version = "1.32", features = ["rt", "macros"]}
toml = {version = "0.8"}
once_cell = "1.18.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8"

[[example]]
name = "feed"

[[example]]
name = "averages"

# [profile.dev]
# features = ["all"]

# TODO make features actually work
# [features]
# implementations = []
# reqwest = ["implementations", "dep:reqwest"]