[package]
name = "type-matrux-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["as_ref"] }
http = "1.1.0"
reqwest = { version = "0.12.7", optional = true }
thiserror = { version= "1.0.63", optional = true}
tracing = { version = "0.1.40", features = ["attributes"] }
url = "2.5.2"

[features]
std = []
stderror = [ "std", "dep:thiserror" ]
reqwest = [ "dep:reqwest" ]
