[package]
name = "type-matrux-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["as_ref"] }
edge-http = {version = "0.2.1", default_features = false }
reqwest = { version = "0.12.7", optional = true }
thiserror = { version= "1.0.63", optional = true}
tracing = { version = "0.1.40", features = ["attributes"] }
url = "2.5.2"
serde = {version = "1.0.209", default_features = false, features = [ "derive", "alloc"], optional = true}
paste = "1.0.15"

[features]
std = []
maybe-url = [ "derive_more/is_variant", "derive_more/unwrap", "derive_more/try_unwrap" ]
stderror = [ "dep:thiserror", "dep:serde" ]
reqwest = [ "dep:reqwest", "dep:serde" ]
serialize = [ "dep:serde", "url/serde" ]
deserialize = [ "dep:serde" ]
serde = [ "serialize", "deserialize" ]
