[package]
name = "type-matrux-requests"
version = "0.1.0"
edition = "2021"

[dependencies]
edge-http = {version = "0.2.1", default_features = false }
serde = {version = "1.0.209", default_features = false, features = [ "alloc", "derive"]}
serde_json = "1.0.127"
type-matrux-core = { path = "../type-matrux-core", features = [ "deserialize", "maybe-url" ] }
type-matrux-util = { path = "../type-matrux-util", features = [ "asow" ] }
sealed = "0.5.0"

[features]
serialize = [ "type-matrux-core/serialize" ]
